# medical-summary-builder

./: .env.example  .gitignore  Dockerfile  LESSONS_LEARNED.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: summary_template.docx
src/medical_summary_builder/: __init__.py  cache.py  logging_config.py  main.py  pipeline.py
src/medical_summary_builder/agents/: __init__.py  analysis_agent.py  base.py  extraction_agent.py  intent_agent.py  report_agent.py  validation_agent.py
static/: index.html
tests/: conftest.py  test_analysis_agent.py  test_extraction_agent.py  test_intent_agent.py  test_report_agent.py  test_validation_agent.py
